--- a/public/frontend/css/single-product-details.css
+++ b/public/frontend/css/single-product-details.css
@@ -478,30 +478,14 @@ textarea:hover,
     text-align: center;
 }
 
-.product-card {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 10px;
-    text-align: center;
-    max-width: 300px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-bottom: 50px;
-}
-
-.product-card img {
-    border-radius: 8px;
-    margin-bottom: 10px;
-    width: 300px;
-    height: 280px;
-}
-
 .product-card p {
-    font-size: 0.9rem;
-    color: #555;
+    font-size: 20px;
+    color: black;
     margin: 5px 0;
 }
-
+.product-card a{
+    color: black;
+}
 .product-card strong {
     font-size: 1rem;
     color: #000;
@@ -555,3 +539,57 @@ textarea:hover,
 .ctn-rating {
     display: flex;
 }
+.product-card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 10px;
+    text-align: center;
+    max-width: 300px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 50px;
+    position: relative;
+}
+
+.product-card img {
+    border-radius: 8px;
+    margin-bottom: 10px;
+    width: 300px;
+    height: 280px;
+}
+
+.product-badge {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    height: 25px;
+    background-color: #000000;
+    color: #ffffff;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-size: 12px;
+    padding: 0 10px;
+    display: inline-block;
+    line-height: 25px;
+    z-index: 1;
+}
+.pre-oder-new-arrivals {
+    font-size: 10px;
+    text-transform: uppercase;
+    letter-spacing: 0.75px;
+    font-weight: 600;
+    background-color: red;
+    width: 80px;
+    height: 15px;
+    border-radius: 10px;
+    border: 1px solid red;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+.pre-oder-new-arrivals span {
+    color: white !important;
+    text-align: center;
+}
+
+
